--- a/index.html
+++ b/index.html
@@ -4,15 +4,31 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Chmod Calculator</title>
+    <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon.ico" />
+    <link rel="canonical" href="https://chmodcalculator.org" />
     <link href="css/bootstrap.min.css" rel="stylesheet" />
     <link href="css/custom.css" rel="stylesheet" />
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4453732808692284"
+      crossorigin="anonymous"
+    ></script>
+    <meta name="google-adsense-account" content="ca-pub-4453732808692284" />
+    <title>CHMOD Calculator | Linux Permission Generator (2024)</title>
+    <meta
+      name="description"
+      content="In the context of the chmod calculator, both number and text formats are
+     supported, providing users with flexibility and clarity in expressing
+     permissions."
+    />
   </head>
   <body>
     <header>
       <div class="header-con">
-        <div class="logo">Chmod Calculator</div>
-        <p>All Permissions</p>
+        <div class="logo">ChmodCalculator.org</div>
+        <a href="https://chmodcalculator.in/chmod-permissions"
+          >All Permissions</a
+        >
       </div>
     </header>
 
@@ -118,6 +134,217 @@
         <!-- Ad Here -->
       </div>
     </div>
+
+    <main class="article main">
+      <h2>About CHMOD Calculator</h2>
+      <p>
+        If you often work in the terminal using Linux commands, you might find
+        it a bit confusing to change file permissions, especially if you have to
+        do it many times.
+      </p>
+      <p>
+        The good news is that you don't have to remember all those complicated
+        chmod codes anymore. I've created a simple tool called the chmod
+        calculator, and it makes changing file permissions easy.
+      </p>
+      <img
+        class="featured-img"
+        src="./img/chmodcalculatororg.webp"
+        alt="chmodcalculator.org"
+        title="chmodcalculatororg"
+      />
+      <p>
+        This tool is user-friendly, and the best part is that it's completely
+        free. You don't even have to sign in to use it.
+      </p>
+      <p>
+        If you're new to this tool, don't worry – I'll give you a complete
+        overview and explanation so you can use it without any hassle.
+      </p>
+      <p>
+        In the world of web development and server management, understanding
+        file permissions is crucial.
+      </p>
+      <p>
+        The chmod (change mode) command is a powerful tool that allows users to
+        control who can access and modify files and directories.
+      </p>
+      <p>
+        To make this process even more accessible, a chmod calculator emerges as
+        a valuable asset.
+      </p>
+      <p>
+        In this article, we'll explore the features of a versatile chmod
+        calculator designed to simplify the often intricate task of setting
+        permissions.
+      </p>
+      <p>
+        In the context of the chmod calculator, both number and text formats are
+        supported, providing users with flexibility and clarity in expressing
+        permissions.
+      </p>
+      <h3>Number Format</h3>
+      <p>
+        The number format in chmod codes represents the combination of
+        permissions assigned to the user, group, and others.
+      </p>
+      <p>
+        Each digit in the three-digit sequence corresponds to a specific set of
+        permissions:
+      </p>
+      <ul>
+        <li>
+          First Digit (User): Represents the permissions for the file owner.
+        </li>
+        <li>
+          Second Digit (Group): Represents the permissions for the group
+          associated with the file.
+        </li>
+        <li>
+          Third Digit (Others): Represents the permissions for everyone else.
+        </li>
+      </ul>
+
+      <p>The digits follow a numeric value assignment:</p>
+
+      <ul>
+        <li>4 (Read): Permission to read the file or directory.</li>
+        <li>
+          2 (Write): Permission to modify or delete the file or directory.
+        </li>
+        <li>
+          1 (Execute): Permission to execute the file or access the directory.
+        </li>
+      </ul>
+
+      <p>
+        Combining these values results in a numeric chmod code. For example, a
+        code of <b>777</b> means full read, write and execute permissions for
+        the user, group, and others.
+      </p>
+      <h3>Text Format</h3>
+      <p>
+        In the text format, chmod codes use a combination of letters to
+        represent permissions:
+      </p>
+
+      <ul>
+        <li>
+          'r' (Read): Denoted by 'r', it allows the user to read the content of
+          a file or view the contents of a directory.
+        </li>
+        <li>
+          'w' (Write): Denoted by 'w', the user can modify or delete the file or
+          add/remove the content in a directory.
+        </li>
+        <li>
+          'x' (Execute): Denoted by 'x', it allows the user to execute a file or
+          access the contents of a directory.
+        </li>
+      </ul>
+
+      <p>
+        The text format consists of three sets of three characters each,
+        representing the user, group, and others. For example,
+        '<b>rwxrwxrwx</b>' signifies that the user, group, and others have read,
+        write, and execute permissions.
+      </p>
+      <h2>Features of the Chmod Calculator</h2>
+      <h3>User-Friendly Interface</h3>
+      <p>
+        The first and foremost feature of this chmod calculator is its
+        user-friendly interface.
+      </p>
+      <p>
+        The tool is designed to be intuitive and easy to use, ensuring that even
+        those new to file permissions can navigate it effortlessly.
+      </p>
+      <h3>Multiple Calculation Options</h3>
+      <p>
+        The calculator provides various options for calculating chmod codes.
+      </p>
+      <p>
+        Users can select the appropriate option based on their specific needs,
+        whether it's setting permissions for a single user, group, or others.
+      </p>
+      <p>
+        This flexibility ensures that the tool caters to a wide range of
+        scenarios.
+      </p>
+      <h3>Text and Number Format</h3>
+      <p>
+        The calculator supports both text and number formats for chmod codes.
+      </p>
+      <p>
+        Users can choose the format they are most comfortable with, allowing for
+        seamless integration into different workflows.
+      </p>
+      <h3>Free for Lifetime</h3>
+      <p>
+        One of the standout features of this chmod calculator is its commitment
+        to being free for a lifetime.
+      </p>
+      <p>
+        Users can access the tool without worrying about subscription fees or
+        hidden charges, making it an accessible resource for developers and
+        administrators.
+      </p>
+      <h3>One-Click Copy Option</h3>
+      <p>
+        Copying chmod codes is made effortless with the one-click copy option.
+      </p>
+      <p>
+        Users can generate the desired code and paste it directly into their
+        terminal or script, streamlining the process and minimizing the chance
+        of errors.
+      </p>
+      <h3>Test Your Code</h3>
+      <p>
+        A unique feature that sets this chmod calculator apart is the ability to
+        test your code.
+      </p>
+      <p>
+        By entering the chmod code in the provided input field, users can verify
+        the code before using it in the terminal.
+      </p>
+      <p>
+        This adds an extra layer of convenience, especially for users on the go.
+      </p>
+      <h3>Desktop and Mobile Compatibility</h3>
+      <p>The chmod calculator is not limited to a specific platform.</p>
+      <p>
+        It is accessible on both desktop and mobile devices, ensuring that users
+        can manage file permissions whether they are working from their computer
+        or mobile phone.
+      </p>
+      <h2>Conclusion</h2>
+      <p>
+        In conclusion, the chmod calculator presented here combines simplicity
+        with powerful features, making it an invaluable tool for anyone dealing
+        with file permissions.
+      </p>
+      <p>
+        Its user-friendly interface, multiple calculation options,
+        <a href="https://en.wikipedia.org/wiki/Chmod">
+          support for text and number formats </a
+        >, lifetime free access, one-click copy, and the innovative text your
+        code feature make it a comprehensive solution for managing permissions
+        effectively.
+      </p>
+      <p>
+        Whether you're a seasoned developer or a novice administrator, this
+        chmod calculator is a must-have resource in your toolkit.
+      </p>
+      <p>
+        Accessible on both desktop and mobile devices, it ensures that you have
+        the flexibility to manage permissions anytime, anywhere.
+      </p>
+      <p>
+        Once you calculate the chmod code for the first time then make sure to
+        share this with your friends so that they can also able to save some
+        time.
+      </p>
+    </main>
 
     <script src="js/jquery.min.js"></script>
 
