adsense and google analytics

--- a/index.html
+++ b/index.html
@@ -14,6 +14,24 @@
       crossorigin="anonymous"
     ></script>
     <meta name="google-adsense-account" content="ca-pub-4453732808692284" />
+    <meta
+      name="google-site-verification"
+      content="6R801iYqvCfCAWJ2ef7sba-sYbIEHGi1qAbantzUxjs"
+    />
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-7PPKJ5Z9FD"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-7PPKJ5Z9FD");
+    </script>
     <title>CHMOD Calculator | Linux Permission Generator (2024)</title>
     <meta
       name="description"
